# SADP-AI-Integration

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  SOPHIA_AI_PROJECT.md  USER_GUIDE.md  docker-compose.yml  github_integration.py  github_setup_commands.md  install.bat  pyproject.toml  requirements.txt  run.bat  test.bat  test_collaboration.json
src/api/: api_server.py
src/claude_integration/: claude_ai.py
src/core/: sadp_core.py
src/cursor_ai_integration/: cursor_ai.py
src/figma_ai_integration/: figma_ai.py
tests/: test_core_integration.py
