name = "sadp-ai-integration"
version = "1.0.0"
description = "Smart AI Development Platform with Multi-Agent Collaboration"
authors = ["Sean K.S. Shin <sshin@geri.kr>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ginnov-tech/SADP-AI-Integration"
repository = "https://github.com/ginnov-tech/SADP-AI-Integration"
documentation = "https://sadp-ai-integration.readthedocs.io/"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.0.0"
asyncio-mqtt = "^0.13.0"
openai = "^1.0.0"
anthropic = "^0.8.0"
groq = "^0.4.0"
PyGithub = "^2.1.0"
gitpython = "^3.1.40"
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
redis = "^5.0.0"
playwright = "^1.40.0"
beautifulsoup4 = "^4.12.0"
selenium = "^4.15.0"
pandas = "^2.1.0"
numpy = "^1.25.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
requests = "^2.31.0"
httpx = "^0.25.0"
websockets = "^12.0"
loguru = "^0.7.0"
prometheus-client = "^0.19.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
toml = "^0.10.2"
cryptography = "^41.0.0"
bcrypt = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.12.0"
black = "^23.0.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.poetry.scripts]
sadp = "src.core.sadp_core:main"
sadp-claude = "src.claude_integration.claude_ai:main"
sadp-cursor = "src.cursor_ai_integration.cursor_ai:main"
sadp-figma = "src.figma_ai_integration.figma_ai:main"
